--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background-color: #FFF7ED;
+  background-color: white;
   font-family: "Inter", sans-serif;
 }
 
